--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="commons-net-3.1.jar"/>
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry kind="lib" path="xstream-1.4.4-sources.jar"/>
+	<classpathentry kind="lib" path="xstream-1.1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
