--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="commons-net-3.1.jar"/>
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
-	<classpathentry kind="lib" path="xstream-1.4.4-sources.jar"/>
-	<classpathentry kind="lib" path="xstream-1.1.2.jar"/>
+	<classpathentry kind="lib" path="xstream-distribution-1.4.7-src.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
