--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="lib" path="xmlpull-1.1.3.1.jar"/>
 	<classpathentry kind="lib" path="xpp3_min-1.1.4c.jar"/>
 	<classpathentry kind="lib" path="commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="org.apache.commons.io.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
