--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry kind="lib" path="jaxb-api.jar"/>
 	<classpathentry kind="lib" path="jaxb-impl.jar"/>
+	<classpathentry kind="lib" path="jaxb-core.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
